# CodeAlpha-Netsniffer-v3.0

./: README.md  main_cli.py  requirements.txt
needed/tests/: test_alerts.py  test_classifier.py  test_payload.py  test_traffic_rate.py
netsniffer/: assets.py  cli.py  config.py  models.py
netsniffer-pro/: README.md  main.py  netsniffer.spec  netsniffer_cli.spec  pyproject.toml
netsniffer/analysis/: payload.py  traffic_rate.py
netsniffer/capture/: alerts.py  classifier.py  sniffer.py
netsniffer/export/: exporters.py
netsniffer/ui/: app.py  save_dialog.py
scripts/: build_linux.sh  setcap_linux.sh
