[project]
name = "netsniffer-pro"
version = "3.0.0"
description = "Modern network packet sniffer with a CustomTkinter GUI and a terminal CLI, sharing one capture/classification/export core (CodeAlpha Cybersecurity Internship)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ouchahed Salma" }]
requires-python = ">=3.10"
dependencies = [
    "scapy",
    "customtkinter",
    "matplotlib",
    "pillow",
]

[project.optional-dependencies]
dev = ["pytest"]
build = ["pyinstaller>=6.0"]
cli = ["rich", "pyfiglet"]

[project.scripts]
netsniffer = "netsniffer.ui.app:ModernNetworkSnifferGUI"
netsniffer-cli = "netsniffer.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["netsniffer*"]

[tool.setuptools.package-data]
netsniffer = ["assets/*.png", "assets/*.ico"]
